# quiz-discord-bot

./: .env-example  Cargo.toml  README.md
src/: main.rs  openai_client.rs  openai_quiz_client.rs  quiz_manager.rs
src/commands/: answer.rs  mod.rs  quiz.rs
src/interactions/: answer_handler.rs  interaction_handlers.rs  mod.rs  quiz_handler.rs  results_handler.rs
