[package]
name = "discord-bot"
version = "0.1.0"
edition = "2021"

[dependencies]
dotenv = "0.15.0"
rand = "0.8.5"
reqwest = { version = "0.12.12", features = ["json"] }
serde =  { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.135"
serenity = { version = "0.12.4", features = ["client", "gateway", "rustls_backend"] }
tokio = { version = "1.43.0", features = ["macros", "rt-multi-thread", "full"] }
